# small-project-defender

./: .gitignore  README.md
security-scripts/: configure-firewall.sh
small-project-defender/: Cargo.toml
small-project-defender-rs/src/: appconfig.rs
small-project-defender/etc/: config.yaml.example
small-project-defender/src/: appconfig.rs  hash_scaner.rs  main.rs
spd-client/: Cargo.toml
spd-client/etc/: config.yaml.example
spd-client/src/: appconfig.rs  connection.rs  cryptography.rs  hash_scaner.rs  main.rs  port_detector.rs  server_send.rs  ssh_detector.rs
spd-server/: Cargo.toml
spd-server/etc/: config.yaml.example
spd-server/src/: appconfig.rs  main.rs  tcp_server.rs
