[package]
name = "small-project-defender"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-siv = "0.2.0"
config = "0.15.11"
glob = "0.3.2"
inotify = "0.11.0"
rand = "0.9.1"
regex = "1.11.1"
serde = "1.0.219"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros", "net", "time"] }
